--- a/src/components/Todo/todo.css
+++ b/src/components/Todo/todo.css
@@ -28,7 +28,7 @@ nav{
     
     nav{
         justify-content: space-between;
-        margin: 0 5px;
+        margin: 0 15px;
     }
 
 }
@@ -82,6 +82,7 @@ nav button{
     width: 350px;
     padding: 10px;
     gap: 10px;
+    border-radius: 5px;
 }
 .todo-card .task-title{
     flex-basis: 60%;
@@ -110,6 +111,13 @@ nav button{
     /* font-size: 16px; */
     display: flex;
     gap: 10px;
+}
+
+
+.remove-all-btn button{
+    padding: 10px 15px;
+    border-radius: 5px;
+ 
 }
 
 button{
